--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,17 @@
 .App {
   text-align: center;
+  background-color: rgb(97, 97, 97);
 }
 
 .Calendar {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+}
+
+.CalendarTileEntry {
+  padding: 0.5em;
+  outline-style: solid;
 }
 
 .react-calendar {
@@ -39,7 +44,7 @@
 .react-calendar button {
   margin: 0;
   border: 0;
-  outline: none;
+  outline: thin;
 }
 .react-calendar button:enabled:hover {
   cursor: pointer;
@@ -71,8 +76,8 @@
 }
 .react-calendar__month-view__weekNumbers .react-calendar__tile {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: top;
+  justify-content: top;
   font-size: 0.75em;
   font-weight: bold;
 }
