--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,9 @@ body {
   text-align: center;
 }
 
-.Calendar {  
-  margin: auto;
-  width: 50%;
-  height: 100%;
+.Calendar {
+  display: flex;
+  justify-content: center;
 }
 
 .CalendarTileEntry {
