--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,7 @@ body {
 }
 
 .Calendar {
-  display: flex;
-  justify-content: center;
+  display: inline-block;
 }
 
 .CalendarTileEntry {
@@ -17,7 +16,7 @@ body {
 }
 
 .react-calendar {
-  width: 1450px;
+  width: 700px;
   max-width: 100%;
   background: white;
   border: 1px solid #a0a096;
