--- a/src/components/EpCalendar.css
+++ b/src/components/EpCalendar.css
@@ -23,6 +23,7 @@ body {
   border: 1px solid #a0a096;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.125em;
+  margin-top: 20px;
 }
 
 .react-calendar--doubleView {
