--- a/src/components/EpCalendar.css
+++ b/src/components/EpCalendar.css
@@ -13,7 +13,9 @@ body {
 
 .CalendarTileEntry {
   padding: 0.3em;
-  /* outline-style: solid; */
+  width: '70%';
+  height: '70%';
+  object-fit: 'contain';
 }
 
 .react-calendar {
