minor changes, some improved code clarity

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-body {
-  /* background-color: rgb(97, 97, 97); */
-}
+/* body {
+  background-color: rgb(97, 97, 97);
+} */
 
 .App {
   text-align: center;
